# syndicate-core-engine

./: .sqlfluff  README.md  qe_hack_syndicate_raw_account_account_202604211356_raw.csv  qe_hack_syndicate_raw_address_address_202604211356_raw.csv  qe_hack_syndicate_raw_customer_customer_202604211356_raw.csv  sample-jira-tickets.json  sample-jira-tickets.md  synthetic-data-generator.yaml  testing_issues_prompt.txt
qe-agent/: .dockerignore  README.md  pyproject.toml
qe-agent/agent/: __init__.py  config.py  observability.py  results.py  root_agent.py  usage.py
qe-agent/agent/scenarios/: __init__.py  catalog.py  coding_standards.py  functional.py  integration.py  non_functional.py  runner.py  static_analysis.py
qe-agent/agent/server/: __init__.py  jira_webhook.py  main.py
qe-agent/agent/sub_agents/: __init__.py  agents.py  base.py
qe-agent/agent/sub_agents/bdd_authoring/: __init__.py  agent.py  (+2 more)
qe-agent/agent/tools/: __init__.py  bigquery_toolset.py  credentials.py  dbt_toolset.py  gcs_toolset.py  github_toolset.py  harness_toolset.py  jira_toolset.py  kubernetes_toolset.py  neo4j_toolset.py
qe-agent/cli/: __init__.py  qe_cli.py
qe-agent/deploy/: Dockerfile  cloudbuild.yaml
qe-agent/deploy/k8s/: configmap.yaml  deployment.yaml  ingress.yaml  rbac.yaml  secret.example.yaml  service.yaml  serviceaccount.yaml
qe-agent/docs/: .env  integrations.md  sample.sh  tests  tests.yaml
qe-agent/qe_quality_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
qe-agent/tests/: test_bdd_sync.py  test_scenarios.py  test_usage.py
(+90 files in other folders)
