[project]
name = "qe-quality-agent"
version = "0.1.0"
description = "Quality Engineering AI Agent (Google ADK) for the syndicate-core-engine data pipeline."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=0.3.0",
    "google-cloud-aiplatform>=1.60.0",
    "google-cloud-bigquery>=3.25.0",
    "google-cloud-storage>=2.18.0",
    "google-auth>=2.34.0",
    "neo4j>=5.20.0",
    "kubernetes>=30.1.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.8.0",
    "PyYAML>=6.0.2",
    # static-analysis tooling invoked by the static_analysis sub-agent
    "sqlfluff>=3.1.0",
    "ruff>=0.6.0",
    "bandit>=1.7.9",
    "yamllint>=1.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-mock>=3.14.0",
]

[project.scripts]
qe-cli = "cli.qe_cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["agent", "agent.tools", "agent.sub_agents", "agent.scenarios", "agent.server", "cli"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.sqlfluff.core]
dialect = "bigquery"
templater = "jinja"
